<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:theme="@style/AppTheme"
    android:layout_margin="10dp"
    tools:context="de.kruemelopment.org.memo_sql.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/card">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/editText3"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/stargrey" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText3"
            android:layout_alignBottom="@+id/editText3"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/close_circle_outline" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText3"
            android:layout_alignBottom="@+id/editText3"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/checkbox_marked_circle_outline" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:maxHeight="300dp"
            android:textColor="?android:attr/textColorPrimary" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:hint="@string/title"
            android:inputType="text"
            android:textColor="@color/colorAccent" />

        <AutoCompleteTextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:gravity="center"
            android:hint="@string/categorie"
            android:textColor="?android:attr/textColorSecondary"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:maxEms="8" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/editText3"
            android:layout_alignBaseline="@+id/imageView8"
            android:layout_toStartOf="@+id/imageView8"
            app:srcCompat="@drawable/lock_open_outline" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView13"
            android:layout_alignParentEnd="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxEms="10"
            android:minEms="5"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="10sp"
            android:visibility="gone" />

    </RelativeLayout>


</RelativeLayout>
